--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>This is a paragraph</p>
     <p>Second paragraph</p>
     <p>Third paragraph</p>
+    <p>feature/3 was here</p>
 </body>
 
 </html>
